Several bug fixes, composer bump, swagger update
